# MultiHopKG

./: .gitignore  LICENSE  README.md  TODO.md  data_preparation.py  debug_server.py  dict.json  experiment-emb.sh  experiment.sh  flake.nix  kge_calculate_epsilon.py  kge_evaluation.py  kge_launcher.py  kge_run.sh  kge_train.py  kge_transfer_learning.py  launch.json  mlm_training.py  nav_superviced_training.py  nav_training.py  pg_4.py  playground.ipynb  playground.py  playground0.py  playground1.py  playground2.py  playground3.py  playground4.py  playground_path_rendering.py  playground_samples.py  playground_transe_triplet_distance.ipynb  pretraining.py  pretraining_navagent.py  pretraining_simple_navagent.py  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_dev.txt  rl_training.py  split_jeopardy.py
configs/: FB15k_237_sweep_bayes.yaml  FB15k_protate_config.yaml  FB15k_sweep_bayes.yaml  FB15k_transe_config.yaml  KinshipHinton_protate_config.yaml  KinshipHinton_transe_config.yaml  fb15k-237-rotate.sh  fb15k-237-transe.sh  itl-conve.sh  itl-rs.sh  itl-transe.sh  kinship_sweep_bayes.yaml  kinship_sweep_grid.yaml  kinship_sweep_random.yaml  my_config.yaml  nav_rl_kinship_sweep_bayes.yaml  nav_rl_kinship_sweep_bayes2.yaml  nav_rl_kinship_sweep_bayes3.yaml  nav_sv_kinship_sweep_bayes.yaml  nav_sv_kinship_sweep_bayes2.yaml  nav_sv_kinship_sweep_bayes3.yaml  rl_config.yaml  sun_best_config.sh
configs/embedding_training/: mquake.yaml
configs/pretraining/: pretraining_alpha.yaml  transE_mquake_dim500.yaml
configs/supervised/: mquake.yaml
multihopkg/: data_utils.py  datasets.py  environments.py  itl_typing.py  knowledge_graph.py  language_models.py  logging.py  vector_search.py
multihopkg/emb/: emb.py  fact_network.py  operations.py
multihopkg/exogenous/: sun_models.py
multihopkg/graph/: classical.py
multihopkg/logs/: torch_module_logging.py
multihopkg/models_language/: classical.py  graph.py
scripts/: analyze_embedding_distances.py  check_embeddings.py  check_mquake.py  dump_checkpoint_data.py
src/: data_utils.py  experiments.py  knowledge_graph.py  learn_framework.py  parse_args.py
tests/: conftest.py
(+28 files in other folders)
